# platzky-google-tag-manager

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: lint.yml  release.yml  test.yml  tests.yml
platzky_google_tag_manager/: __init__.py  plugin.py
tests/: test_google_tag_manager_plugin.py
