[tool.poetry]
name = "platzky_google_tag_manager"
version = "0.2.1"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
platzky = "^2.0.0a4"

[tool.poetry.plugins."platzky.plugins"]
google-tag-manager = "platzky_google_tag_manager:GoogleTagManagerPlugin"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^26.5.1"
ruff = "^0.15.20"
pyright = "^1.1.411"
coverage = "^7.14.3"
interrogate = "^1.7.0"

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
target-version = "py314"
show-fixes = true

[tool.ruff.lint]
select = [
    "I",
    "F",
    "E",
    "W",
    "PT",
    "RUF",
]

[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportMissingParameterType = true
reportUnknownArgumentType = true
reportUnknownMemberType = true
reportUnknownVariableType = true
reportUnknownParameterType = true
reportUnnecessaryTypeIgnoreComment = true
reportUntypedClassDecorator = false
reportUntypedFunctionDecorator = false
reportUnnecessaryIsInstance = false
reportUnusedFunction = true
reportUntypedBaseClass = false

[tool.pytest.ini_options]
markers = [
    "skip_coverage: skip coverage for this test",
]

[tool.interrogate]
fail-under = 95
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
ignore-semiprivate = false
exclude = ["tests", "docs"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
